2013-04-12 Niels Grewe <niels.grewe@halbordnung.de>
	* Source/DKEndpoint.m: Backport r35789: Replace incorrect
	NSDebugMLog with NSDebugFLog. Reported by Philippe Roussell.

2011-12-20 Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: When selecting an Objective-C compiler, prefer the
	value of $CC if $OBJC is not set. Also, if the user does not specify
	a specific compiler and clang is installed, default to using clang.
	* config.make.in: Update for new compiler selection.
	* configure: Regenerate.

2011-05-17 Andreas Schik <andreas.schick@web.de>

	* Source/DKNotificationCenter.m: Fix off-by-one error when
	computing the interface from a notification name.

2011-04-29 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKNotificationCenter.m: Fix incorrect return statement.

2011-04-15 Niels Grewe <niels.grewe@halbordnung.de>

	* Tests/TestDKArgument.m: Fix word-size issues.
	* Documentation/install.texi: Bump required gnustep-base
	version to 1.22.0.
	* INSTALL: Regenerate.

2011-04-11 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKEndpointManager.m: Use pseudo interfaces instead of
	@class declarations for private classes that need to be
	initialized before starting the worker thread. This makes clang
	happy.
	* Source/DKArgument.m: Remove extraneous parantheses.
	* Source/DKInterface.m: Fix a bug that caused property
	getters/setters to be registered twice.

	Clang compatibility and bugfixes by Sebastian Reitenbach.

2011-03-13 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/GNUmakefile: Remove redundant fixup for atomic
	operations linkage errors on 32bit intel platforms.

2011-02-28 Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Import a lot of autoconf stuff to detect whether
	we need to link libgcc for atomic operations.
	* config.make.in: Add flags for atomic operations.
	* aclocal.m4
	* configure:
	Regenerate
	* m4/*
	* config.guess
	* config.sub
	* ltmain.sh
	* libtool
	* install-sh:
	Add libtool/autconf related file.
