@@ -1,1 +1,1 @@
-VERSION = 0.1
+VERSION = 0.1.1
